--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*----------GLOBAL CSS----------*/
+
+
+
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+	-webkit-font-smoothing: antialiased;
+	overflow-y: scroll;
 }
+
+body::-webkit-scrollbar {
+	display: none
+}
+
+ul {
+	list-style: none
+}
+
+img {
+	width: 100%
+}
+
+label,
+input[type=button],
+input[type=submit],
+button {
+	cursor: pointer
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+
+
+/*----------PSUDO CLASSES----------*/
+
+
+
+:root {
+	--primary-color: ;
+    --primary-color-hover: ;
+    --secondary-color: ;
+    --secondary-color-hover: ;
+    
+    --background-color: ;
+    --border-color: ;
+    --border-color-active: ;
+    
+    --white-color: #fff;
+    --black-color: #000;
+}
+
+
+
+/*----------UTILITY CLASSES----------*/
+
+
+
+.container {
+	max-width: 1200px;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	margin: 0 auto;
+}
+
+
+
+/*----------ID'S CLASSES----------*/
+
+
+
+
+
+
+
+/*@media(max-width: 1000px){
+  
+}*/
